Nueva Actualizacion 1.2.0!
Se a mejorado la carga de elementos, gestion de instancias, eh correciones de errores y bugs al inicializar versiones de minecraft custom (Forge, Neoforged, optifine, etc)
Tambien se a mejorado los logs de inicializacion eh gestion de recursos al proceso de Minecraft para que se asignen correctamente
Se a mejorado la conexion entre cliente y servidor para que sea mas estable y que la conexion no se corte en momentos criticos como la descarga de minecraft oh de ejecutamiento, esto evita perder logs por el camino al reestablecer la conexion
Nuevo endpoint agregado para poder recuperar los logs del proceso, asi en caso de desconexion del cliente eh servidor los logs se puedan recuperar, puede almacenar 500 ~ 1500 logs para no explotar la memoria ram